# Fluid-Dynamics-ML

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: Projeto ML_ Problema de Riemann Fluidodinâmica.md  sequencia_prompts_codex_projeto_riemann_ml.md
notebooks/: 01_fvm_sod.ipynb  02_pinn_sod.ipynb  03_fno_operator.ipynb  pipeline_run.ipynb
notebooks/data/artifacts/fno/outputs/: ENVIRONMENT.txt  loss_history.json  metrics_epoch_10.json  metrics_epoch_20.json  metrics_epoch_5.json
notebooks/data/artifacts/fvm_sod_notebook/: solution_sod.npz
notebooks/data/artifacts/pinn/checkpoints/: checkpoint  ckpt-1000.data-00000-of-00001  ckpt-1000.index  ckpt-2000.data-00000-of-00001  ckpt-2000.index  ckpt-500.data-00000-of-00001  ckpt-500.index
notebooks/data/artifacts/pinn/outputs/: configs_used.yaml  loss_history.json  metrics_step_1000.json  metrics_step_2000.json  metrics_step_500.json
scripts/: cli_examples.sh  dev_install.sh  eval_all.sh  format.sh  gen_dataset.sh  run_all_sod_demo.sh  run_fvm_sod.sh  run_tests.sh  sanity_quick.sh  train_fno.sh  train_pinn_sod.sh
src/riemann_ml/: __init__.py  __main__.py  cli.py
src/riemann_ml/configs/: fno.yaml  fno_notebook.yaml  fvm.yaml  pinn.yaml
src/riemann_ml/core/: euler1d.py
src/riemann_ml/data/: generate.py
src/riemann_ml/eval/: metrics.py  report.py  speed.py
src/riemann_ml/exact/: __init__.py  sod_exact.py
src/riemann_ml/fvm/: __init__.py  second_order.py  solver.py
src/riemann_ml/ml/fno/: __init__.py  dataset.py  model.py  train.py
src/riemann_ml/ml/pinn/: __init__.py  model.py  train.py
src/riemann_ml/utils/: plotting.py  repro.py
tests/: test_cli.py  test_conversions.py  test_euler1d.py  test_flux.py  test_fno_dataset.py  test_fno_model.py  test_fvm.py  test_fvm_rusanov.py  test_generate.py  test_metrics.py  test_pinn_model.py  test_sod_exact.py
